service-b/00_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: service-b
  labels:
    istio.io/rev: asm-managed
