service-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-b
  name: service-b
  namespace: service-b
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http # adding for Istio
  selector:
    app: service-b
